--- a/index.html
+++ b/index.html
@@ -1,1 +1,133 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gloock"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"/>
+  <title>Jamie's Portfolio</title>
+</head>
+<body class="bigwrap">
+  <!-- Nav Bar --to the Left -->
+  <nav class="navibar">
+    <ul class="navibar">
+      </li>
+      <li class="navibar__tabs navibar__tabs--padding">
+        <a href="#landing">Home</a>
+      </li>
+      <li class="navibar__tabs">
+        <a href="#projects">Projects</a>
+      </li>
+      <li class="navibar__tabs">
+        <a href="#about">About</a>
+      </li>
+    </ul>
+  </nav>
+  <!-- landing page -->
+  <main id="landing" class="landing">
+    <section class="home">
+      <div class="content">
+        <div class="hero-main">
+          <div class="hero-main hero-main__text">
+            <h1>Junior Software Engineer</h1>
+            <p class="hero-main__margin">
+              Hey, I'm Jamie. An aspiring software engineer in the making. Based in Sydney, Australia.
+            </p>
+            <div class="techcont">
+              <div class="hero-main__margin hero-main__margin--bottom">Tech Stack</div>
+                <ul class="hero-main__margin hero-main--center">
+                  <li class="hero-main__logo hero-main__logo--first">
+                    <img src="./logos/w3_css-icon.svg" alt="CSS logo">
+                  </li>
+                  <li class="hero-main__logo">
+                    <img src="./logos/w3_html5-icon.svg" alt="HTML5 logo">
+                  </li>
+                  <li class="hero-main__logo">
+                    <img src="./logos/javascript-icon.svg" alt="JavaScript logo">
+                  </li>
+                  <li class="hero-main__logo">
+                    <img src="./logos/sass-lang-icon.svg" alt="Sass Logo">
+                  </li>
+                </ul>
+            </div>
+            <div class="contacts">
+              <a class="contacts" href="https://www.linkedin.com/in/jamie-chhit-862945188/" alt="LinkedIn Link">
+                <i class="devicon-linkedin-plain">
+                </i>
+              </a>
+              <a class="contacts" href="https://github.com/c-jme">
+                <i class="devicon-github-original colored">
+                </i>
+              </a>
+              <a class="contacts" href="mailto:jamie.chhit1@gmail.com">
+                <img src="./logos/icons8-envelope-48.png" alt="Email Logo">
+              </a>
+
+            </div>
+          </div>
+        </div>  
+      </div>
+    </section>
+  <!-- projects  -->
+  <section id="projects" class="project">
+    <h2 class="project project__title">Projects</h2>
+    <div class="project">
+      <div class="project project__card">
+        <a href="https://github.com/c-jme">
+          <img src="logos/github logo.png">
+        </a>
+        <a href="https://github.com/c-jme">
+          <img src="logos/link logo.png">
+        </a>
+        <p class="project__card--right">
+          This is project one that I've worked on and have used the following tech stack.
+        </p>
+        <img class="project__card--left" src="./images/bananas-resized.jpg">
+      </div>
+      <div class="project project__card">
+        <a href="https://github.com/c-jme">
+          <img src="logos/github logo.png">
+        </a>
+        <a href="https://github.com/c-jme">
+          <img src="logos/link logo.png">
+        </a>
+        <p class="project__card--right">
+          This is project two that I've worked on and have used the following tech stack.
+        </p>
+        <img class="project__card--left" src="./images/bananas-resized.jpg">
+      </div>
+      <div class="project project__card">
+        <a href="https://github.com/c-jme">
+          <img src="logos/github logo.png">
+        </a>
+        <a href="https://github.com/c-jme">
+          <img src="logos/link logo.png">
+        </a>
+        <p class="project__card--right">
+          This is project three that I've worked on and have used the following tech stack.
+        </p>
+        <img class="project__card--left" src="./images/bananas-resized.jpg">
+      </div>
+    </div>
+  </section>
+  <!-- about -->
+    <section id="about" class="about">
+      <h2 class="about about__font about__font--lrg">About</h2>
+      <p class="about about__font">
+        I'm Jamie.
+        <br />
+        Once a student on their way to becoming a primary teacher, I've gone and through multiple different industries and
+        <br/>
+        now have ended up an aspiring software engineer. 
+        <br />
+        In my spare time, I'm still learning more to refine my skills. If not that, I'll be out bowling, reading books or lifting in the gym!
+      </p>
+    </section>
+  <footer>
+    </section>
+  </footer>
+  </main>
+</body>
+</html>
